--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node app.js",
     "build": "docker build -t marek5050/node-web-app .",
-    "deploy":"docker run --network=artifacts_default  -p 49160:4000 -d marek5050/node-web-app"
+    "deploy": "docker run --network=artifacts_default  -p 49160:4000 -d marek5050/node-web-app"
   },
   "keywords": [
     "fabric-client sample app",
@@ -19,6 +19,7 @@
   },
   "license": "Apache-2.0",
   "dependencies": {
+    "@theledger/fabric-mock-stub": "^3.0.0",
     "amqp": "0.2.7",
     "body-parser": "^1.17.1",
     "cookie-parser": "^1.4.3",
@@ -31,6 +32,7 @@
     "fabric-client": "~1.3.0",
     "fs-extra": "^2.0.0",
     "jsonwebtoken": "^7.3.0",
-    "log4js": "^0.6.38"
+    "log4js": "^0.6.38",
+    "swagger-ui-express": "^4.0.1"
   }
 }
