--- a/artifacts/docker-compose.yaml
+++ b/artifacts/docker-compose.yaml
@@ -23,6 +23,8 @@ services:
   neo4j.example.com:
     image: neo4j
     container_name: neo4j.example.com
+    environment:
+      - NEO4J_AUTH=neo4j/neo4jj
     ports:
     - '7474:7474'
     - '7687:7687'
